[tool.poetry]
name = "sdcli"
version = "2.0.0rc0"
description = "A command line tool for automating important grunt work."
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]
include = ["sdcli/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
tqdm = "^4.64.0"
requests = "^2.28.1"
cachecontrol = "^0.12.11"

[tool.poetry.scripts]
sdcli = "sdcli.main:app"

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
show_column_numbers = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
