[project]
name = "sdcli"
version = "2.1.0"
description = "A command line tool for automating important grunt work."
authors = [
    {name = "Elias Gabriel", email = "me@eliasfgabriel.com"},
]

requires-python = ">=3.7,<4.0"
dependencies = [
    "typer[all]<1.0.0,>=0.3.2",
    "tqdm<5.0.0,>=4.64.0",
    "requests<3.0.0,>=2.28.1",
    "cachecontrol<1.0.0,>=0.12.11",
]

[project.urls]
homepage = "https://www.metabronx.com/"
documentation = "https://github.com/metabronx/sdcli"
repository = "https://github.com/metabronx/sdcli"

[tool.pdm.scripts]
docs = "typer sdcli.main utils docs --name sdcli --output USAGE.md"

[project.scripts]
sdcli = "sdcli.main:app"

[tool.pdm.dev-dependencies]
dev = [
    "typer-cli>=0.0.13"
]

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
show_column_numbers = true

[tool.setuptools]
packages = ["sdcli"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
